# specgrid

./: .gitignore  CHANGELOG.md  LICENSE  README.md  config.py  new_spectra.py  pyproject.toml  spectra.ipynb  spectra.py
snspectra/: settings.py
specgrid/: __init__.py  settings.py  spectra.py
